# halofire-studio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_LOG.md  CHANGELOG.md  CODEX_REVIEW.md  HALOFIRE_REQUIREMENTS.md  HALOFIRE_ROADMAP.md  HALOFIRE_TECHNICAL_PLAN.md  HONEST_STATUS.md  README.md  SELF_TRAIN_PLAN.md  package.json  pytest.ini
.claude/: launch.json
apps/halofire-studio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/halofire-studio-desktop/src-tauri/src/: lib.rs  main.rs
apps/halofire-studio-desktop/src-tauri/src/commands/: catalog.rs  host.rs  hydraulic.rs  mod.rs  pipeline.rs  project.rs  scad.rs
data/: phase_d_manifest.json  phase_d_pricing.json  pricing_log.json  scrape_log.json
docs/: AUTOSPRINK_CLONE_PLAN.md  AUTOSPRINK_CLONE_PLAN_V2.md  AUTOSPRINK_TARGET.md  CODEBASE_MAP.md  CODEX_SWEEP_READY.md  CORE_ARCHITECTURE.md  CORE_ARCHITECTURE_GAPS.md  FULL_STACK_REBUILD_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATED_STACK_V2.md  LEARNING_LOOP.md  PHASE_A_1_COMPLETE.md  PHASE_A_COMPLETE.md  PHASE_B_COMPLETE.md  PHASE_COMPLETION_REPORT.md  PHASE_C_COMPLETE.md  PHASE_D_1_SCHEMA_RECONCILE.md  PHASE_D_3_AUTHORING_REPORT.md  PHASE_D_4_RENDER_PRICING_REPORT.md  PHASE_D_5_RENDER_COMPLETE.md  PHASE_D_6_PRICING_FOLLOWUP.md  PHASE_D_DATA_REPORT.md  PHASE_E_INTAKE_REPORT.md  PHASE_E_PLACER_ROUTER_REPORT.md  PHASE_F_COMPLETE.md  PHASE_G_DESIGN_REPORT.md  PHASE_H_1_COMPLETE.md  PHASE_H_2_COMPLETE.md  PHASE_H_3_COMPLETE.md  PHASE_H_4_COMPLETE.md  PHASE_H_PLAN.md  PORTS.md  REAL_PLAN_FORK_PASCAL.md  RELEASE_NOTES_v0.1.0.md  SHIP_REPORT_2026-04-21.md  (+4 more)
(+395 files in other folders)
